--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+* {
+  text-align: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +39,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+.topnav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(10, 10, 10);
+  overflow: hidden;
+  height: 60px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav h3 {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 0px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  padding: 30px;
+}
+
+/* Change the color of links on hover */
+.topnav h3:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav .active {
+  background-color: #4caf50;
+  color: white;
 }
