--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,9 @@
 .App {
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-* {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -27,19 +15,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.topnav {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .mx-auto { 
+  display:flex;
+  flex-direction: row
+} */
+/* 
 .topnav {
   display: flex;
   align-items: center;
@@ -49,7 +33,7 @@
   height: 60px;
 }
 
-/* Style the links inside the navigation bar */
+
 .topnav h3 {
   float: left;
   color: #f2f2f2;
@@ -59,15 +43,4 @@
   font-size: 15px;
   padding: 30px;
 }
-
-/* Change the color of links on hover */
-.topnav h3:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.topnav .active {
-  background-color: #4caf50;
-  color: white;
-}
+ */
