--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,22 @@
 }
 
 .singleArticleContainer{
-  max-width: 700px;
-  margin: 0 auto
-
-   
+  max-width: 790px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
+
+.singleArticleSmallText{
+  margin-top: 0.5em;
+  font-size: 0.875em;
+  font-weight: bold;
+}
+
+.singleArticleBody{
+  font-size: 1.0em;
+}
 /* .mx-auto { 
   display:flex;
   flex-direction: row
