--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   flex-direction: column;
 }
 
+form{
+  max-width: 790px;
+  margin: 0 auto;
+}
 
 .singleArticleSmallText{
   margin-top: 0.5em;
